<resources>
    <string name="app_name">Калькулятор</string>
    <string name="defValue">Введите пример</string>
    <string name="editTextHint">Введите пример</string>
    <string name="btnZeroText">0</string>
    <string name="btnOneText">1</string>
    <string name="btnTwoText">2</string>
    <string name="btnThreeText">3</string>
    <string name="btnFourText">4</string>
    <string name="btnFiveText">5</string>
    <string name="btnSixText">6</string>
    <string name="btnSevenText">7</string>
    <string name="btnEightText">8</string>
    <string name="btnNineText">9</string>
    <string name="btnPointText">.</string>
    <string name="tagAdd">+</string>
    <string name="tagDiv">/</string>
    <string name="tagMul">x</string>
    <string name="tagSub">-</string>
</resources>