<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/img_background"
    tools:context=".CalculatorActivity">
    
    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="false"
        android:fontFamily="@font/roboto_bold"
        android:gravity="bottom"
        android:hint="@string/editTextHint"
        android:textColor="@color/orange"
        android:textColorHint="@color/white"
        android:textSize="@dimen/btnTextSize"
        app:layout_constraintBottom_toTopOf="@id/spacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Space
        android:id="@+id/spacer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/spaceHeight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNumberDecimal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnSevenText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnEight"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnEightText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@id/btnNine"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnNineText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDiv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/superLightGray"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:textColor="@color/orange"
        android:textSize="@dimen/btnTextSize"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:icon="@drawable/ic_operation_div"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPaddingDef"
        app:iconSize="@dimen/iconSizeDef"
        app:iconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@id/spacer"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/rippleOperationColor"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnFourText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnFive"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnFiveText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@id/btnSix"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintTop_toBottomOf="@id/btnEight"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnSixText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintEnd_toStartOf="@id/btnMul"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@id/btnNine"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnMul"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/superLightGray"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:icon="@drawable/ic_operation_mul"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPaddingDef"
        app:iconSize="@dimen/iconSizeDef"
        app:iconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@id/btnDiv"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/rippleOperationColor"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnOneText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnTwoText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnPoint"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toBottomOf="@id/btnFive"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnThreeText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toTopOf="@id/btnEqually"
        app:layout_constraintEnd_toStartOf="@id/btnSub"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@id/btnSix"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/superLightGray"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:icon="@drawable/ic_operation_sub"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPaddingDef"
        app:iconSize="@dimen/iconSizeDef"
        app:iconTint="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@id/btnMul"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/rippleOperationColor"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginBottomDef"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/zeyada"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnZeroText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnPoint"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOne"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPoint"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginBottomDef"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        android:text="@string/btnPointText"
        android:textColor="@color/gray"
        android:textSize="@dimen/btnTextSize"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEqually"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintTop_toBottomOf="@id/btnTwo"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/orange"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEqually"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginBottomDef"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:icon="@drawable/ic_operation_equals"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPaddingDef"
        app:iconSize="@dimen/iconSizeDef"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnPoint"
        app:layout_constraintTop_toBottomOf="@id/btnThree"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/rippleEqualColor"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginBottomDef"
        android:backgroundTint="@color/superLightGray"
        android:fontFamily="@font/roboto_bold"
        android:insetTop="@dimen/btnInsetDef"
        android:insetBottom="@dimen/btnInsetDef"
        app:cornerRadius="@dimen/btnCornerRadiusDef"
        app:icon="@drawable/ic_operation_add"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/iconPaddingDef"
        app:iconSize="@dimen/iconSizeDef"
        app:iconTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/btnHeightPercentDef"
        app:layout_constraintStart_toEndOf="@+id/btnEqually"
        app:layout_constraintTop_toBottomOf="@id/btnSub"
        app:layout_constraintWidth_percent="@dimen/btnWidthPercentDef"
        app:rippleColor="@color/rippleOperationColor"
        app:strokeColor="@color/lightGray"
        app:strokeWidth="@dimen/btnStrokeWidthDef" />

</androidx.constraintlayout.widget.ConstraintLayout>